converted the images for attribute rewriting.
2003-04-19  Sven Neumann  <sven@gimp.org>

	* books/index.htrw: converted the images for attribute rewriting.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-19  Sven Neumann  <sven@gimp.org>
+
+	* books/index.htrw: converted the images for attribute rewriting.
+
 2003-04-18  Helvetix Victorinox  <helvetix@mysterious.org>
 
         * The default New news article always available in the pending
