--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-19 carol <cspears@cablespeed.com>
+
+    * /about/splash-stable.htrw, converted from the html
+    * /about/splash-stable.html, removed
+    * /about/index.html, typo fixed
+
 2003-04-19  Sven Neumann  <sven@gimp.org>
 
 	* admin/gimp-web-urls: fixed wrong links for images in the books
