--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-04-19 carol <cspears@cablespeed.com>
+
+    * /about/splash-stable.htrw, removed this file
+    * /about/splash/stable.htrw, added the missing </tr>
+    * /about/index.htrw, changed this to reflect the changes to /about/splash/stable.htrw
+    * /admin/gimp-web-urls, changed this to reflect the changes to /about/splash/stable.htrw
+    
 2003-04-20  Helvetix Victorinox  <helvetix@mysterious.org>
 
         * News RSS is available via http at
