--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-04-22 scizzo <scizzo@gimp.org>
+
+	* /admin/gimp-web-urls: Updated with some more home: and tutorial:
+	links.
+	
+	* /tutorials/*/*.html: Removed all the html files in the tutorials.
+	* /tutorials/*/*.htrw: Add the new htrw files to be used in the
+	tutorials. All of them uses the htrw files now. All files also have a
+	copyright of the text and images in the tutorial in the top of the
+	tutorial now.
+	
 2003-04-21  Helvetix Victorinox  <helvetix@mysterious.org>
 
         * bwerp: left behind a bit of debugging code.
