New file from bbc
2003-02-27  Manish Singh  <yosh@gimp.org>

        * windows/develop.html: New file from bbc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-27  Manish Singh  <yosh@gimp.org>
+
+	* windows/develop.html: New file from bbc
+
 2003-04-22 scizzo <scizzo@gimp.org>
 
 	* /admin/gimp-web-urls: Updated with some more home: and tutorial:
