--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-04-28  Henrik Brix Andersen  <brix@gimp.org>
+
+        * links/org.html: corrected the link to cinnamon.gimp.org,
+	changed the describtion
+
+        * team.htrw:
+        * admin/gimp-web-urls: changed dictionary entry to match my name
+
 2003-04-27  Helvetix Victorinox  <helvetix@mysterious.org>
 
         * programmatic/admin/develop/.cvsignore: 
