--- a/ChangeLog
+++ b/ChangeLog
@@ -1,57 +1,59 @@
 2003-05-01  Helvetix Victorinox  <helvetix@mysterious.org>
 
         * Added .cvsignore files for:
+                ./
                 unix/
                 unix/howtos
                 os2/howtos
                 programmatic/
-                books/.cvsignore
-                about/.cvsignore
+                books/
+                about/
+                about/splash
                 programmatic/tools
                 programmatic/about/ChangeLogs
-                3d_Logo/.cvsignore
-                Advanced_Animations/.cvsignore
-                Anti-Aliased_Threshold/.cvsignore
-                Basic_Perl/.cvsignore
-                Basic_Scheme2/.cvsignore
-                Basic_Scheme/.cvsignore
-                Bezier_Selections/.cvsignore
-                Blending_Exposures/.cvsignore
-                Blown_Out_Highlights/.cvsignore
-                Blur_Overlays/.cvsignore
-                Borders_On_Selections/.cvsignore
-                Changing_Background_Color_1/.cvsignore
-                Changing_Background_Color_2/.cvsignore
-                Color2BW/.cvsignore
-                Coloring_A_BW_Sketch/.cvsignore
-                ContrastMask/.cvsignore
-                Creating_Icons/.cvsignore
-                Custom_Brushes/.cvsignore
-                Drawables/.cvsignore
-                Draw_A_Paint_Brush/.cvsignore
-                Drawing_Shapes/.cvsignore
-                Film_Grain/.cvsignore
-                Golden_Text/.cvsignore
-                Image_Map/.cvsignore
-                Image_Pipes2/.cvsignore
-                Image_Pipes/.cvsignore
-                Lite_Quickies/.cvsignore
-                Perl-Debugged/.cvsignore
-                Perlotine/.cvsignore
-                Photo_To_Sketch/.cvsignore
-                Quickmask/.cvsignore
-                Red_Eye_Removal/.cvsignore
-                Reducing_CCD_Noise/.cvsignore
-                Selective_Color/.cvsignore
-                Selective_Gaussian_Blur/.cvsignore
-                Sepia_Toning/.cvsignore
-                Simple_Animations/.cvsignore
-                Smart_Sharpening/.cvsignore
-                Straight_Line/.cvsignore
-                template/.cvsignore
-                The_Basics/.cvsignore
-                Tileable_Textures/.cvsignore
-                Using_GAP/.cvsignore
+                3d_Logo/
+                Advanced_Animations/
+                Anti-Aliased_Threshold/
+                Basic_Perl/
+                Basic_Scheme2/
+                Basic_Scheme/
+                Bezier_Selections/
+                Blending_Exposures/
+                Blown_Out_Highlights/
+                Blur_Overlays/
+                Borders_On_Selections/
+                Changing_Background_Color_1/
+                Changing_Background_Color_2/
+                Color2BW/
+                Coloring_A_BW_Sketch/
+                ContrastMask/
+                Creating_Icons/
+                Custom_Brushes/
+                Drawables/
+                Draw_A_Paint_Brush/
+                Drawing_Shapes/
+                Film_Grain/
+                Golden_Text/
+                Image_Map/
+                Image_Pipes2/
+                Image_Pipes/
+                Lite_Quickies/
+                Perl-Debugged/
+                Perlotine/
+                Photo_To_Sketch/
+                Quickmask/
+                Red_Eye_Removal/
+                Reducing_CCD_Noise/
+                Selective_Color/
+                Selective_Gaussian_Blur/
+                Sepia_Toning/
+                Simple_Animations/
+                Smart_Sharpening/
+                Straight_Line/
+                template/
+                The_Basics/
+                Tileable_Textures/
+                Using_GAP/
 
         * admin/gimp-web-urls: fixed the mailto link for myself
 
@@ -65,8 +67,8 @@
 
 2003-04-27  Helvetix Victorinox  <helvetix@mysterious.org>
 
-        * programmatic/admin/develop/.cvsignore: 
-        * programmatic/tools/.cvsignore: 
+        * programmatic/admin/develop/: 
+        * programmatic/tools/: 
         * programmatic/develop/.cvsignore: Tuning up .cvsignore files
         
 
