--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-12  Henrik Brix Andersen  <brix@gimp.org>
+
+        * team.htrw: On carols request I have changed my description from
+	"Web Technician" to "Contributer"
+
 2003-05-01  Helvetix Victorinox  <helvetix@mysterious.org>
 
         * Added tutorials/.cvsignore
