--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,14 @@
+2003-06-15  Carol Spears  <carol@gimp.org>
+
+        * turned off the justification on the news ;)
+        * repointed bugs.html to bugzilla.htrw
+        * removed bogus plug-ins in menu
+        * pointed macintosh at unix
+        * deemed it good to go.
+
 2003-06-15  Manish Singh  <yosh@gimp.org>
 
 	* admin/example.html: remove generated file
-
 	* programmatic/apache_ssi.py
 	* programmatic/tools/rewrite_attrs.py
 	* programmatic/tools/ssi-pp.py
