--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-15  Manish Singh  <yosh@gimp.org>
+
+	* team.htrw: s/Contributer/Contributor/
+
 2003-06-15  Carol Spears  <carol@gimp.org>
 
         * turned off the justification on the news ;)
