Removed the borders around the images. This makes a lot of images look better then with the border. Changed (Image|Colors|Desaturate) to "<Image> Image -> Colors -> Desaturate". Bug fix in "What is it?" about image placement in the tutorial. Intention: Linked "Drawing Shapes with Bezier" to the tutorial on the site. Fixed a typo. Did some changes in the paragraphs to make them more clear and look more like the original tutorial. Changed the words "below" to "above". Add some paragraphs to make the tutorial more readable. Fixed the missing links in the tutorial. Missing tags from the original tutorial fixed. Fixed some tags to go with the original tutorial. Fixed a few links that was not added. Fixed a few missing tags that is being used in the original tutorial. Fixed a small typo. Bug fix that said image to the left instead of image above. Add Keep Trans to the drop shadow step. Add some files to the repository. Removed some other files that is being replaced.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,34 @@
+2003-06-19 scizzo <scizzo@gimp.org>
+
+	* index.html, bugs.html, registry.html, template.html: Removed files.
+	* index.htrw, bugs.htrw, registry.htrw, template.htrw: Added files.
+	* /style/default.css: Removed the borders around the images. This
+	makes a lot of images look better then with the border.
+	
+	* /tutorials/The_Basics: Bug fix that said image to the left instead
+	of image above. Add Keep Trans to the drop shadow step.
+	* /tutorials/Borders_On_Selections/: Fixed a typo.
+	* /tutorials/Anti-Aliased_Threshold: Changed (Image|Colors|Desaturate)
+	to "<Image> Image -> Colors -> Desaturate".
+	* /tutorials/Bezier_Selections/: Bug fix in "What is it?" about image
+	placement in the tutorial. Intention: Linked "Drawing Shapes with
+	Bezier" to the tutorial on the site.
+	* /tutorials/Custom_Brushes/: Note: needs a class.
+	* /tutorials/Drawing_Shapes/: Fixed the missing links in the tutorial.
+	Missing tags from the original tutorial fixed.
+	* /tutorials/Film_Grain/film-grain-vertical.pat: Add this file it was
+	missing in the tutorial.
+	* /tutorials/Film_Grain/gimp-grey-modes.diff: This was also missing.
+	Fixed the links to the files.
+	* /tutorials/Film_Grain/index.htrw: Fixed some tags to go with the
+	original tutorial. Fixed a few links that was not added.
+	* /tutorials/Changing_Background_Color_1/: Did some changes in the
+	paragraphs to make them more clear and look more like the original tutorial.
+	* /tutorials/Changing_Background_Color_2/: Changed the words "below"
+	to "above". Add some paragraphs to make the tutorial more readable.
+	* /tutorials/Simple_Animations/: Fixed a few missing tags that is
+	being used in the original tutorial. Fixed a small typo.
+
 2003-06-18  Helvetix Victorinox  <helvetix@mysterious.org>
 
         * Some code cleanup and tightening.
